# llvm-opt-passes

./: .gitignore  CMakeLists.txt  README.md
include/: ConstantFoldingPass.h  LoopUnrollingPass.h  RedundancyAnalysis.h  RedundancyEliminationPass.h
scripts/: benchmark.sh  run_tests.sh
src/: ConstantFoldingPass.cpp  LoopUnrollingPass.cpp  PassRegistration.cpp  RedundancyAnalysis.cpp  RedundancyEliminationPass.cpp
test/: benchmark.c  constant_folding.ll  loop_unrolling.ll  redundancy_elimination.ll
